# payout-service

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: ci.yaml  ci.yml
core/api/: exception_handler.py
nginx/conf.d/: default.conf
payout_service/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
payout_service/settings/: __init__.py  base.py  dev.py  production.py  settings.py
payouts/: choices.py  constants.py  exceptions.py  models.py  tasks.py
payouts/api/: serializers.py  urls.py  views.py
payouts/migrations/: 0001_initial.py
payouts/tests/: test_tasks.py
payouts/tests/api/: test_views.py
payouts/tests/factories/: __init__.py  payout.py
scripts/: start_server.sh
scripts/utils/: prestart.sh  start_gunicorn.sh
