[project]
name = "payout-service"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2,<5.1",
    "djangorestframework>=3.14",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.1",
    "celery[redis]>=5.3",
    "pillow>=10.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
