[project]
name = 'payout-service'
version = '0.1.0'
readme = 'README.md'
requires-python = '>=3.10'

dependencies = [
    'celery[redis]>=5.3.0',
    'django>=4.2.0,<5.1.0',
    'djangorestframework>=3.14.0',
    'drf-spectacular>=0.29.0',
    'gunicorn>=23.0.0',
    'pillow>=10.0.0',
    'psycopg[binary]>=3.1.0',
]

[dependency-groups]
dev = [
    'factory-boy>=3.3.3',
    'pytest-cov>=7.0.0',
    'pytest-django>=4.12.0',
    'pytest-mock>=3.15.1',
]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'payout_service.settings'
python_files = ['tests.py', 'test_*.py', '*_tests.py']
addopts = '--reuse-db --nomigrations'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
